2004-07-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct (symlink): Add dvips and music-drawing-routines.ps.
	(web_path): Fixes for webball.  Install fixes, add DESTDIR option.

	* lily/slur.cc: Add quant-score to interface.  Fixes web build.

	* python/SConscript:
	* python/vim:
	* input/mutopia/*SConscript: New file.

	* input/mutopia/W.A.Mozart/: Use .ily suffix for includes.

	* scm/define-grobs.scm (all-grob-descriptions): Use ,Slur::height,
	fixes web build.

	* make/stepmake.make (scons): re-route to SCONS if user has been
	running scons in this tree.

	* SConstruct (config_vars): Add CPPDEFINES.
	(env): Set checksums type to "content".
	(save_config_cache): Do not exit after configuring when using
	checksums (the default) instead of timestamps.

2004-07-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct: Further development.

	* input/test/SConscript: 
	* input/template/SConscript: 
	* input/regression/SConscript: 
	* Documentation/bibliography/SConscript:
	* Documentation/bibliography/index.html.in: New file.

	* Documentation/bibliography/GNUmakefile (local-WWW): Remove index
	generation.

	* buildscripts/builder.py: Add new builders.

	* make/stepmake.make: 
	* stepmake/stepmake/*.make: 
	* configure.in:
	* lily/*:
	* flower*: Use config.hh (Was config.h).

	* scm/encoding.scm (get-coding): Print friendly error message when
	no encoding is found, rather than crashing.

2004-07-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/new-slur.cc (score_slopes): strong sloping score only when
	stems point in same dir. 

2004-07-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/mutopia/W.A.Mozart/mozart-hrn3-rondo.ly (rondo): bugfix
	for beam start.

	* lily/parser.yy (context_prop_spec): check grob name for
	alphanumericness..

	* lily/lyric-engraver.cc: creates LyricText objects

2004-07-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/lily-guile.hh (scm_from_int): add scm_from_int glue.

2004-07-13  Jan Nieuwenhuizen  <janneke@gnu.org>
