@@ -104,8 +104,8 @@ Copyright @copyright{} 1999--2004 by the authors
 
 @vskip 20pt
 
-%% Not yet debugged or reported.  This crashes gs-8.01:
-%% compiling gs-8.01 right now... -- jcn
+@c Not yet debugged or reported.  This crashes gs-8.01:
+@c compiling gs-8.01 right now... -- jcn
 @lilypond[raggedright]
 \score {
     \context Lyrics \notes {
