@@ -298,7 +298,11 @@ output = {
 
 PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 %%%% Options: [%(option_string)s]
-#(define toplevel-score-handler ly:parser-print-score)
+#(set! toplevel-score-handler ly:parser-print-score)
+#(set! toplevel-music-handler (lambda (p m)
+			       (ly:parser-print-score
+				p (ly:music-scorify m))
+			    ))
 %(preamble_string)s
 \paper {%(paper_string)s
 }
